# isotokyo

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
assets/animations/: jinrai.anim  jinrai.ron  nsf.anim  nsf.ron  sakura.ron
crates/client/: Cargo.toml
crates/client/src/: client.rs
crates/server/: Cargo.toml
crates/server/src/: server.rs
crates/shared/: Cargo.toml
crates/shared/src/: config.rs  input.rs  lib.rs  networking.rs  physics.rs  player.rs  sprites.rs  ui.rs
resources/animations/: jinrai.ron  nsf.ron  sakura.ron
src/: assets.rs  camera.rs  config.rs  context.rs  graphics.rs  input.rs  lib.rs  main.rs  networking.rs  player.rs  sprites.rs  state.rs  ui.rs  utils.rs
src/assets/: animation.rs
src/graphics/: debug.rs  global.rs  object.rs  shaders.rs  texture.rs
src/graphics/shaders/: debug.vert  shader.frag  shader.vert
src/state/: game.rs
src/state/game/: actor.rs  player.rs
