[package]
name = "isotokyo"
version = "0.0.2"
authors = ["Agiel <agiel.negura@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bevy = { version = "0.10.1", features = [ "dynamic_linking", "serialize" ] }
bevy_egui = "0.20.1"
bevy_rapier3d = "0.21.0"
bevy_renet = "0.0.7"
bincode = "1.3"
rand = "0.8"
renet_visualizer = { version = "0.0.4", features = [ "bevy"] }
ron = "0.8.0"
serde = { version = "1", features = [ "derive" ] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

