[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.12.1", features = [ "dynamic_linking", "serialize" ] }
bevy_egui = "0.23.0"
bevy_rapier3d = "0.23.0"
bevy_renet = { version = "0.0.10", features = [ "serde" ] }
bincode = "1.3"
renet_visualizer = { version = "0.0.7", features = [ "bevy"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
