[package]
name = "client"
version = "0.0.0"
authors = ["Agiel <agiel.negura@gmail.com>"]
edition = "2021"
workspace = "../.."

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
isotokyo = { path = "../shared" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_renet = { workspace = true }
bincode = { workspace = true }
renet_visualizer = { workspace = true }
