[package]
name = "server"
version = "0.0.0"
authors = ["Agiel <agiel.negura@gmail.com>"]
edition = "2021"
workspace = "../.."

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
isotokyo = { path = "../shared" }
bevy = { version = "0.11.0", features = [ "dynamic_linking", "serialize" ] }
bevy_egui = "0.21.0"
bevy_rapier3d = "0.22.0"
bevy_renet = { git = "https://github.com/lucaspoffo/renet" }
bincode = "1.3"
renet_visualizer = { git = "https://github.com/lucaspoffo/renet", features = [ "bevy"] }
