[package]
name = "server"
version = "0.0.0"
authors = ["Agiel <agiel.negura@gmail.com>"]
edition = "2021"
workspace = "../.."

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
isotokyo = { path = "../shared" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
bevy_renet = { workspace = true }
bevy_xpbd_3d = { workspace = true }
bincode = { workspace = true }
renet_visualizer = { workspace = true }
