[package]
name = "isotokyo"
version = "0.0.0"
authors = ["Agiel <agiel.negura@gmail.com>"]
edition = "2021"
workspace = "../.."

[dependencies]
anyhow = "1"
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_renet = { workspace = true }
rand = "0.8"
ron = "0.8.0"
serde = { version = "1", features = [ "derive" ] }
